--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ body {
     padding-bottom: 100px;
     color: #fff;
     background: url(fondo.png), #7b4397;
-    background: url(fondo.png), -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
+    background: url(fondo.png), webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
     background: url(fondo.png), linear-gradient(to left, #7b4397, #dc2430)
 }
 
@@ -61,8 +61,7 @@ body {
     letter-spacing: 2px;
 }
 
-.presupuesto_ingreso,
-.presupuesto_egreso {
+.presupuesto_ingreso,.presupuesto_egreso {
     padding: 12px;
     text-transform: uppercase;
 }
