--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,16 @@ body {
     font-weight: 400;
 }
 
+select {
+    width: 100px;
+
+}
+option {
+    width: 150px;
+    white-space:pre-wrap;
+    word-wrap: break-word;
+}
+
 .derecha { float: right; }
 .rojo { color: #FF5049 !important; }
 .rojofocus:focus { border: 1px solid #FF5049 !important; }
